[FIX] web_studio: change background in studio
Before this commit:

while creating new using the studio line is not visible also this same issue is
in dark mode too.

After this commit:

while creating a new app using Studio Line should be visible properly in
normal mode and dark mode too.

Task-3845561

closes odoo/enterprise#61692

X-original-commit: d90cd95fe0302402fb50b53c38093c2a12ab05cc

--- a/web_studio/static/src/client_action/app_creator/app_creator.scss
+++ b/web_studio/static/src/client_action/app_creator/app_creator.scss
@@ -12,7 +12,6 @@
     }
 
     .o_web_studio_app_creator_left {
-      background-color: $o-web-studio-bg-light;
 
       h1 {
         font-size: 3.5em;
@@ -40,8 +39,12 @@
       }
     }
 
-    .o_field_widget.o_field_many2one {
-      width: 100%;
+    .o_input {
+      border-color: $o-web-studio-text-inactive;
+
+      &:focus-within {
+        border-color: $o-action;
+      }
     }
   }
 }
